Refactor to Android Minimizer

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.cheebeez.back_button_behavior">
+  package="com.cheebeez.android_minimizer">
 </manifest>
